--- a/WebAPI/WebAPI/Web.config
+++ b/WebAPI/WebAPI/Web.config
@@ -68,7 +68,7 @@
   </entityFramework>
 
 <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(local)\sqle2012;Initial Catalog=UserDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=UserDB2;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <system.webServer>
     <handlers>
